# cythonarrays

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  README.md  Untitled1.ipynb  appveyor.yml  build.bat  create_sphinx_docs.bat  genindex.html  index.html  install.bat  make_sphinx_docs.bat  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/cythonarrays/: cythonarrays.array_descriptors.doctree  cythonarrays.array_properties.doctree  cythonarrays.array_shapes.doctree  cythonarrays.build_config.doctree  cythonarrays.configure_logger.doctree  cythonarrays.doctree  cythonarrays.make_cython_extensions.doctree  cythonarrays.numpy_types.doctree  cythonarrays.tests.doctree  cythonarrays.tests.example_cython.doctree  cythonarrays.tests.example_python.doctree  cythonarrays.tests.examplepackage.doctree  cythonarrays.tests.examplepackage.example2_cython.doctree  cythonarrays.tests.module_with_logging.doctree  cythonarrays.tests.simple_cython.doctree  cythonarrays.tests.simple_python.doctree  cythonarrays.tests.test_cythonarray.doctree  cythonarrays.tests.test_logger.doctree  cythonarrays.tests.test_makeext.doctree  modules.doctree
.doctrees/cythoninstallhelpers/: cythoninstallhelpers.build_config.doctree  cythoninstallhelpers.configure_logger.doctree  cythoninstallhelpers.doctree  cythoninstallhelpers.get_version.doctree  cythoninstallhelpers.make_cython_extensions.doctree  cythoninstallhelpers.tests.doctree  cythoninstallhelpers.tests.examplepackage.doctree  cythoninstallhelpers.tests.test_logger.doctree  (+5 more)
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
_sources/: index.rst.txt
continuous-integration/: anaconda-push.py  move-conda-package.py
cythonarrays/: CHANGELOG.md  cythonarrays.array_descriptors.html  cythonarrays.array_properties.html  cythonarrays.array_shapes.html  cythonarrays.build_config.html  cythonarrays.configure_logger.html  cythonarrays.html  cythonarrays.make_cython_extensions.html  cythonarrays.numpy_types.html  cythonarrays.tests.example_cython.html  cythonarrays.tests.example_python.html  cythonarrays.tests.examplepackage.example2_cython.html  cythonarrays.tests.examplepackage.html  cythonarrays.tests.html  cythonarrays.tests.module_with_logging.html  cythonarrays.tests.simple_cython.html  cythonarrays.tests.simple_python.html  cythonarrays.tests.test_cythonarray.html  cythonarrays.tests.test_logger.html  cythonarrays.tests.test_makeext.html  manifest.in  modules.html  pyproject.toml  requirements.txt  setup.py
cythonarrays/conda.recipe/: bld.bat  meta.yaml  meta.yml
cythonarrays/docs_rst/: Makefile  conf.py  make.bat
cythonarrays/docs_rst/cythonarrays/: cythonarrays.rst  cythonarrays.tests.example_python.rst  cythonarrays.tests.rst  cythonarrays.tests.simple_cython.rst  cythonarrays.tests.simple_python.rst  modules.rst
cythonarrays/docs_rst/cythoninstallhelpers/: cythoninstallhelpers.make_cython_extensions.rst  cythoninstallhelpers.rst  cythoninstallhelpers.tests.module_with_logging.rst  modules.rst
cythonarrays/src/cythonarrays/: __init__.py  array_descriptors.py  array_properties.py  array_shapes.pxd  array_shapes.pyx  array_shapes.pyxbld  build_config.py  configure_logger.py  make_cython_extensions.py  numpy_types.pxd
cythonarrays/src/cythonarrays/converters/: read_csv.py  save_ptv.py
cythonarrays/src/cythonarrays/converters/tests/: matrix_bk_format.mtx
cythonarrays/src/cythonarrays/tests/: example_cython.pxd  example_cython.pyx  example_python.py  module_with_logging.py  simple_cython.pxd  simple_cython.pyx  simple_cython.pyxbld  simple_python.py  test_cythonarray.py  test_logger.py  test_makeext.py
cythonarrays/src/cythonarrays/tests/examplepackage/: example2_cython.pxd  example2_cython.pyx
cythoninstallhelpers/: cythoninstallhelpers.build_config.html  cythoninstallhelpers.configure_logger.html  cythoninstallhelpers.get_version.html  cythoninstallhelpers.html  cythoninstallhelpers.make_cython_extensions.html  cythoninstallhelpers.tests.examplepackage.example_cython.html  cythoninstallhelpers.tests.examplepackage.html  cythoninstallhelpers.tests.html  cythoninstallhelpers.tests.module_with_logging.html  cythoninstallhelpers.tests.test_logger.html  cythoninstallhelpers.tests.test_makeext.html  cythoninstallhelpers.tests.test_version.html  modules.html  pyproject.toml  requirements.txt  setup.py  setup_old.py
cythoninstallhelpers/conda.recipe/: bld.bat  build.sh  meta.yaml  meta.yml
cythoninstallhelpers/src/cythoninstallhelpers/: build_config.py  configure_logger.py  get_version.py  make_cython_extensions.py
cythoninstallhelpers/src/cythoninstallhelpers/tests/: _version.py  _version2.py  _version_broken.py  example_cython.pyx  module_with_logging.py  test_logger.py  test_makeext.py  test_version.py
cythoninstallhelpers/src/cythoninstallhelpers/tests/examplepackage/: example_cython.pyxbld
description/: cython_models.html  validation.html
docs_rst/: conf.py  index.rst
matrixconverters/: manifest.in  matrixconverters.html  matrixconverters.read_csv.html  matrixconverters.read_ptv.html  matrixconverters.save_ptv.html  matrixconverters.tests.html  matrixconverters.tests.test_read_csv.html  matrixconverters.tests.test_read_visum.html  matrixconverters.tests.test_save_psv.html  matrixconverters.tests.test_xarray2netcdf.html  matrixconverters.xarray2netcdf.html  modules.html  pyproject.toml  requirements.txt  setup.py
matrixconverters/conda.recipe/: bld.bat  meta.yaml
matrixconverters/src/matrixconverters/: read_csv.py  read_ptv.py  save_ptv.py  xarray2netcdf.py
matrixconverters/src/matrixconverters/tests/: dataset_netcdf.nc4  matrix.csv  matrix_bi_format.mtx  matrix_bl_format.mtx  matrix_o_format.mtx  matrix_o_format_with_dashes.mtx  matrix_o_format_with_zeros.mtx  matrix_o_format_without_names.mtx  matrix_or_format.mtx  matrix_out.cc  matrix_out.cn  matrix_s_format.mtx  test_read_csv.py  test_read_psv.py  test_read_visum.py  test_save_psv.py  test_xarray2netcdf.py  zones.csv
matrixconverters/src/matrixconverters/tests/ÄÖÜß/: ÄÖÜß.nc4
(+97 files in other folders)
