[build-system]
requires = [
    "cython >= 3.0.2",
    "meson >= 1.0.0",
    "meson-python >= 0.14.0",
]
build-backend = "mesonpy"

[project]
name = "siphash24"
version = "1.4"
description = "Streaming-capable SipHash-1-3 and SipHash-2-4 Implementation"
readme = "README.rst"
maintainers = [
    { name = "Daniele Nicolodi", email = "daniele@grinta.net" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Documentation" = "https://dnicolodi.github.io/python-siphash24/"
"Source" = "https://github.com/dnicolodi/python-siphash24/"
"Issue Tracker" = "https://github.com/dnicolodi/python-siphash24/issues"